# tetanus

./: .gitignore.swp  README.md  main.rs
async_fun/: Cargo.toml
async_fun/src/: main.rs
echo-server/: Cargo.toml
echo-server/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: lib.rs  main.rs
riscv-testing/: Cargo.toml
server-playground/: Cargo.toml  db.sqlite  test.sqlite
server-playground/migrations/2019-02-25-045536_in_data/: down.sql  up.sql
server-playground/migrations/2019-02-25-230723_people/: down.sql  up.sql
server-playground/src/: main.rs  schema.rs
server-playground/static/: index.html
stm32f030-hal/: Cargo.toml
stm32f030-hal/src/: gpio.rs  lib.rs
testing/: .gitignore  Cargo.toml  README.md  openocd.gdb
testing/src/: gpio.rs  main.rs
toml-testing/: Cargo.toml  config.toml
toml-testing/src/: main.rs  toml-testing.code-workspace
vexriscv-hello-world/: Cargo.toml  README.md
vexriscv-hello-world/src/: main.rs
webserver/: Cargo.toml  README
webserver-db/: .env  Cargo.toml
webserver-db/migrations/2019-12-18-050955_create_posts/: down.sql  up.sql
webserver-db/src/: lib.rs  models.rs  schema.rs
webserver/src/: main.rs  parser.rs
