[package]
authors = ["David Lenfesty <lenfesty@ualberta.ca>"]
edition = "2018"
readme = "README.md"
name = "testing"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
nb = "0.1.1"

[dependencies.stm32f0]
version = "0.6.0"
features = ["stm32f0x0"]

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[[bin]]
name = "testing"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
