[package]
authors = ["David Lenfesty <lenfesty@ualberta.ca>"]
edition = "2018"
readme = "README.md"
name = "testing"
version = "0.1.0"

[dependencies]
cortex-m-rtfm = "0.4.1"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"

[dependencies.stm32f0]
version = "0.6.0"
features = ["stm32f0x0"]

#[dependencies.stm32f030-hal]
#path = "../stm32f030-hal"
#version = "0.1.0"


[[bin]]
name = "testing"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
