[package]
name = "webserver"
version = "0.1.0"
authors = ["David Lenfesty <lenfesty@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util= "0.3"